src/App.css
/* * {
  border: .1px solid red
} */

html {
  scroll-behavior: smooth;
  overflow-x: hidden;
  /* white-space:nowrap; */
}

/* stops webkit transitions when window is resizing */
.Resize-transition-stopper * {
  transition: none !important;
}

/* Top bar styling */
.Top-bar {
  display: flex;
  flex-direction: row;
  background-color: #CECCCC;
  justify-content: space-between;
  align-items: center;
  height: 5vmin;
  position: fixed;
  width: 100%;
  z-index: 3;
  top: 0;
  max-width: 100%;
  transition: top 0.3s;
}

.Instagram-logo {
  width: 4vmin;
  height: 4vmin;
  align-items: right;
  padding-right: 1vmin;
  position: relative;
  display: flex;
  opacity: .75; 
  transition: 1000ms linear;
}

.Instagram-wrapper {
  position: relative;
  cursor: pointer;
}

.Instagram-logo:hover {
  filter: invert(1);
  opacity: 1;
  -webkit-transition : -webkit-filter 500ms linear;
}

.Instagram-wrapper:hover div{
  visibility: visible;
}

.Email-logo {
  width: 5vmin;
  height: 5vmin;
  display: flex;
  align-items: right;
  vertical-align: middle;
  position: relative;
  opacity: .75;
  transition: 1000ms linear;
}

.Email-logo:hover {
  filter: invert(1);
  opacity: 1;
  -webkit-transition : -webkit-filter 500ms linear;
}

.Logos {
  display: flex;
  flex-direction: row;
  padding-right: 1%;
  justify-content: center;
  align-items: center;
}

.Address {
  color: #282c34;
  /* color: #243e36; */
  font-family: Merienda;
  font-weight: bolder;
  padding-left: 1%;
  font-size: 2vmin;
  text-decoration: none;
  max-width: 30%;
  transition: 500ms ease;
}

.Address:hover {
  color: white;
  transform: scale(1.05);
  -webkit-transition : color 500ms, transform 500ms;
}

.Phone-number {
  position: fixed;
  color: #282c34;
  /* color: #243e36; */
  font-family: Merienda;
  font-weight: bolder;
  font-size: 2vmin;
  left: 50%;
  transform: translateX(-50%);
  transition: 500ms ease;
  text-decoration: none;
}

.Phone-number a {
  text-decoration: inherit;
  color: inherit;
}

.Phone-number:hover {
  color: white;
  transform: scale(1.05) translateX(-48%);
  -webkit-transition : color 500ms, transform 500ms;
}


/* Navbar styling */
.Navbar {
  display: flex;
  flex-direction: row;
  background-color: #65686e;
  /* background-color: #243e36; */
  justify-content: space-between;
  align-items: center;
  height: 10vmin;
  position: fixed;
  width: 100%;
  top: 5vmin;
  z-index: 2;
  max-width: 100%;
  overflow: hidden;
}

.Business-logo {
  position: relative;
  max-width: 10vmin;
  max-height: 10vmin;
  left: 5vmin;
}

.Quote-button-text {
  text-decoration: none;
  color: black;
  font-family: Merienda;
  font-weight: bolder;
  font-size: 2vmin;
  vertical-align: middle;
}

.Nav-button {
  position: relative;
  right: 5vmin;
  /* background-color: rgb(246, 243, 242); */
  background-color: #f1f7ed;
  height: 8vmin;
  width: 20vmin;
  border-radius: 2vmin;
  /* color: #282c34; */
  color: #243e36;
  cursor: pointer;
  justify-content: center;
  align-items: center;
  display: flex;
  transition: 500ms ease;
}

.Nav-button:hover{
  background-color: #282c34;
  /* background-color: #7ca982; */
  border-style: solid;
  /* border-color: white; */
  border-color: #f1f7ed;
  border-width: .2vmin;
  -webkit-transition : border-width 1000ms, background-color 750ms, border-color 1000ms, border-width 1000ms;
}

.Nav-button:hover .Quote-button-text {
  /* color: white; */
  color: #f1f7ed;
  -webkit-transition : color 500ms;
}

@media only screen and (max-width:1000px) { 
  .Nav-button {
    position: relative;
    right: 0vmin;
    background-color: rgb(246, 243, 242);
    height: 6vmin;
    width: 12vmin;
    border-radius: 2vmin;
    color: #282c34;
    justify-content: center;
    align-items: center;
    display: flex;
  }

  .Quote-form-background {
    padding-bottom: 96%;
  }
}

.Nav-text {
  font-family: Merienda;
  font-weight: bolder;
  /* color: white; */
  color:#F1f7ed;
  text-decoration: none;
  position: relative;
  left: 6vmin;
  font-size: 2.5vmin;
}

.Nav-text-seperator {
  font-family: Merienda;
  font-weight: bolder;
  /* color: white; */
  color:#F1f7ed;
  text-decoration: none;
  position: relative;
  left: 6vmin;
  font-size: 2.5vmin;
}

.Nav-text:hover {
  transform: scale(1.25);
  -webkit-transition: transform 500ms;
}

/* First section styling */
.First-section {
  display: flex;
  flex-direction: row;
  justify-content: center;
  background-color: #282c34;
  height: 75vmin;
  width: 100%;
  max-width: 100%;
}

.Wrapper-div {
  height: 15vmin;
  background-color: #65686e;
}

.First-section-button {
  background-color: transparent;
  height: 16vmin;
  width: 40vmin;
  border-radius: 3vmin;
  font-family: Merienda;
  font-weight: bolder;
  font-size: 4vmin;
  cursor: pointer;
  position: absolute;
  top: 45vmin;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: 500ms ease;
  border: #f1f7ed solid .2vmin;
}

.First-section-button:hover{
  transform: scale(1.1);
  border-style: solid;
  border-width: .5vmin;
  -webkit-backdrop-filter: blur(5px);
  backdrop-filter: blur(5px);
  -webkit-transition : transform 500ms, background-color 750ms, border-color 500ms, border-width 1000ms;
}

.First-section-button-text {
  text-decoration: none;
  color: #f1f7ed;
  font-family: Merienda;
  font-weight: bolder;
  font-size: 4.5vmin;
  vertical-align: middle;
}

.First-section-text {
  font-family: Merienda;
  font-weight: bolder;
  font-size: 4vmin;
  position: absolute;
  top: 14vmin;
  z-index: 1;
  overflow-wrap: break-word;
  inline-size: 100vmin;
  text-align: center;
  /* color: white; */
  color: #F1f7ed;
  width: 101vmin
}

.First-section-text-2 {
  font-family: Merienda;
  font-weight: bolder;
  font-size: 4vmin;
  position: absolute;
  top: 75vmin;
  z-index: 1;
  overflow-wrap: break-word;
  inline-size: 100vmin;
  text-align: center;
  /* color: white; */
  color: #F1f7ed;
  width: 101vmin;
}
/* ... */

